Add toast and count

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,56 +13,58 @@
         android:layout_height="wrap_content"
         android:background="@color/colorPrimaryDark"
         android:fontFamily="sans-serif"
-        android:text="@string/app_name"
+        android:text="0"
         android:textAlignment="center"
-        android:textColor="@android:color/white"
-        android:textSize="30sp"
+        android:textColor="@android:color/holo_blue_dark"
+        android:textSize="72sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintVertical_bias="0.3" />
 
     <Button
         android:id="@+id/toast_button"
-        android:background="@color/buttonBackground"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/toast_button"
         android:layout_marginStart="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="@color/buttonBackground"
+        android:onClick="toastMe"
+        android:text="@string/toast_button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
         android:id="@+id/count_button"
-        android:background="@color/buttonBackground"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/count_button"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintRight_toLeftOf="@+id/random_button"
         android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="@color/buttonBackground"
+        android:text="@string/count_button"
+        android:onClick="countMe"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/toast_button"
-        android:layout_marginLeft="8dp" />
+        app:layout_constraintRight_toLeftOf="@+id/random_button"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
         android:id="@+id/random_button"
-        android:background="@color/buttonBackground"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/random_button"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="@color/buttonBackground"
+        android:text="@string/random_button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
 </android.support.constraint.ConstraintLayout>
